a few qol updates

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <p> I'm an aspiring web developer looking to gain experience,<br> 
                 I've just finished my 2 Years of schooling to finish my Degree
             </p>
+            <div class="button">
+                <a href="media/Michael MacNeill's Resume.pdf">My Resume</a>
+            </div>
         </div>
     </section>
     <!-- About Me Section -->
@@ -112,7 +115,7 @@
                         developed for Calgary's Dementia Network to help their users
                         and the society of Calgary better access the data on their site.
                     </p>
-                    <a href="#"><i class="bx bx-link-external"></i></a>
+                    <a href="https://jbrierley.scweb.ca/DNC_Rough_Draft/Justin/home.php"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
         </div>
@@ -128,9 +131,9 @@
                 <li><a href="#">macneillm99@gmail.com</a></li>
             </div>
             <div class="contact-icons" style="display: inline-flex;">
-                <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/michael-macneill-ab04b4239/"><i class="bx bxl-linkedin-square"></i></a></li>
                 <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
-                <li><a href="#"><i class="bx bxl-instagram-alt"></i></a></li>
+                <li><a href="https://www.instagram.com/mike_and_cheese_101/"><i class="bx bxl-instagram-alt"></i></a></li>
             </div>
         </div>
         <div class="contact-form">
