--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 I've just finished my 2 Years of schooling to finish my Degree
             </p>
             <div class="button">
-                <a href="media/Michael MacNeill's Resume.pdf">My Resume</a>
+                <a href="media/Michael MacNeill's Resume.pdf" class="btn">My Resume</a>
             </div>
         </div>
     </section>
