--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span class="two">I'm</span>
             </div>
             <h1>Michael</h1>
-            <h3 class="my-profession">I am a  <span class="typing">Web Developer</span></h3>
+            <h3 class="my-profession">I am a  <span class="typing"></span></h3>
 
             <p> I'm an aspiring web developer looking to gain experience,<br> 
                 I've just finished my 2 Years of schooling to finish my Degree
